2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* storage.c (storage_alloc_): When allocating a new folio, if
	there are still reserve pages, try to take AS_LOCK.  If we fail,
	don't allocate a new folio at this time.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* storage.c (storage_init): If ODESC->STORAGE is ADDR_VOID,
	ignore.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* as.c (as_init): Improve debugging output.
	* storage.c (storage_free_): Likewise.
	(storage_alloc_): Assert that the allocated storage is zerod.

2008-02-08  Neal H. Walfield  <neal@gnu.org>

	* pager.c (__attribute__): New function.
	(pager_fault): Call it before taking PAGERS_LOCK.

2008-02-08  Neal H. Walfield  <neal@gnu.org>

	* storage.c (LINK): Remove dead code.
	(UNLINK): Likewise.

2008-02-08  Neal H. Walfield  <neal@gnu.org>

	* as.h (as_object_index_t): New definition.
	(as_slot_ensure_full_custom): New declaration.
	(as_insert_custom): Likewise.

2008-01-25  Neal H. Walfield  <neal@gnu.org>

	* storage.c (storage_init_done): New variable.
	(storage_alloc_): Assert that storage_init_done is true.
	(storage_init): Set storage_init_done to true.
	
	(storage_init): Count the number of folios allocated and report it
	and the number of objects allocated.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* as.h (as_slot_ensure_full): New declaration.
	(as_insert): Take additional parameters SOURCE_AS and TARGET_AS.
	* as.c (as_slot_ensure_full): Remove declaration.
	(as_slot_ensure): Update use of as_slot_ensure full to be
	consistent with the new API.
	(as_alloc_slow): Update use of rm_cap_copy to be consistent with
	new API.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* as.c (as_slot_ensure): Update use of as_slot_ensure_full to be
	consistent with new API.
	(as_alloc_slow): Update use of rm_cap_copy to be consistent with
	new API.
	(as_init): Likewise.
	(as_walk): Likewise.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* as.c (as_alloced_dump): Use s_printf rather than printf.