@@ -1,3 +1,8 @@
+2008-02-11  Neal H. Walfield  <neal@gnu.org>
+
+	* addon/newlib/libc/sys/hurd/getreent.c (__getreent): Assert
+	MM_INIT_DONE.
+
 2008-02-08  Thomas Schwinge  <tschwinge@gnu.org>
 
 	* Makefile.am (noinst_LIBRARIES): Add `libc-routines.a'.
